[package]
name = "rqtt"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"

[dependencies]
cargo-edit = "0.3.3"
runtime = "0.3.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }

[lib]
name = "rqtt"
path = "src/lib.rs"

[[bin]]
name = "rqtt-cli"
path = "src/bin.rs"
