[package]
name = "rqtt"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"

[dependencies]
cargo-edit = "0.3.3"
num-traits = "0.2"
num-derive = "0.2"
mqtt_5 = { path = "C:\\Users\\Ethan\\Desktop\\mqtt_5" }
bitreader_async = { path = "C:\\Users\\Ethan\\Desktop\\bitreader-async" }

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[lib]
name = "rqtt"
path = "src/lib.rs"

[[bin]]
name = "rqtt-cli"
path = "src/bin.rs"
